--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
