--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.4",
+    "react-select": "^3.1.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
