--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,9 @@ jobs:
     - run: npm test
       env:
         CI: true
+    - name: A
+      run: ./node_modules/.bin/nyc npm test
+    - name: B
+      run: ./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov
     - name: Upload coverage to Codecov
       run: ./node_modules/.bin/codecov
