--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install xmllint
+    - name: Install lcov
       run: sudo apt-get install lcov
     - uses: actions/checkout@v2
     - name: Use Node.js
