--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         CI: true
     - name: nyc npm test
       run: ./node_modules/.bin/nyc npm test
-    - name: B
+    - name: nyc report
       run: ./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov
     - name: Upload coverage to Codecov
       run: ./node_modules/.bin/codecov
