--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
       with:
         node-version: '12.x'
     - run: npm install
-    - run: npm run build --if-present
+    - name: Run tests using Jest
+      run: npm run build --if-present
     - run: npm test -- src --coverage
       env:
         CI: true
