--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,17 +8,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install lcov
-      run: sudo apt-get install lcov
     - uses: actions/checkout@v2
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
     - run: npm install
+    - run: npm run build --if-present
     - name: Run tests using Jest
-      run: npm run build --if-present
-    - run: npm test -- src --coverage
+      run: npm test -- src --coverage
       env:
         CI: true
     - name: Upload coverage to Codecov
