--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
         node-version: '12.x'
     - run: npm install
     - run: npm run build --if-present
-    - run: npm test
+    - name: Run tests using Jest
+      run: npm test -- src --coverage
       env:
         CI: true
+    - name: Upload coverage to Codecov
+      run: ./node_modules/.bin/codecov
