--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "i18next": "^19.8.3",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.3",
     "react-scripts": "^3.4.4",
     "typescript": "^3.7.5"
   },
