--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.52",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
@@ -16,6 +17,7 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.3",
     "react-scripts": "^3.4.4",
