--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.52",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "i18next": "^19.8.3",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
