--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.52",
     "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-event-listener": "^0.4.11",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^1.3.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-event-listener": "^0.6.6",
     "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
