--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "axios-mock-adapter": "^1.19.0",
     "codecov": "^3.8.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5"
+    "enzyme-adapter-react-16": "^1.15.5",
+    "jest-each": "^26.6.2"
   }
 }
