--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "flag-icon-css": "^3.5.0",
     "i18next": "^19.8.3",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
