--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "flag-icon-css": "^3.5.0",
     "i18next": "^19.8.3",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-cookies": "^0.1.1",
